Enhance startup script